--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -23,11 +23,11 @@ jobs:
 
     strategy:
       matrix:
-        idf_version: ["5.2.2"]
+        idf_version: ["v5.3.1", "v5.2.3", "v5.2.2", "v5.1.4", "v5.1.3", "v5.0.7"]
         qemu_version: ["20240606"]
         include:
         - qemu_version: "20240606"
-          qemu_release: "esp_develop_9.0.0_20240606"
+          qemu_release: "esp_develop-9.0.0-20240606"
           qemu_dist: "qemu-xtensa-softmmu-esp_develop_9.0.0_20240606-x86_64-linux-gnu.tar.xz"
           qemu_sha256: "071d117c44a6e9a1bc8664ab63b592d3e17ceb779119dcb46c59571a4a7a88c9"
 
