--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -27,9 +27,13 @@ jobs:
         qemu_version: ["20240606"]
         include:
         - qemu_version: "20240606"
-          qemu_release: "esp_develop-9.0.0-20240606"
+          qemu_release: "esp-develop-9.0.0-20240606"
           qemu_dist: "qemu-xtensa-softmmu-esp_develop_9.0.0_20240606-x86_64-linux-gnu.tar.xz"
           qemu_sha256: "071d117c44a6e9a1bc8664ab63b592d3e17ceb779119dcb46c59571a4a7a88c9"
+        - qemu_version: "20240122"
+          qemu_release: "esp-develop-8.2.0-20240122"
+          qemu_dist: "qemu-riscv32-softmmu-esp_develop_8.2.0_20240122-x86_64-linux-gnu.tar.xz"
+          qemu_sha256: "95ac86d7b53bf98b5ff19c33aa926189b849f5a0daf8f41e160bc86c5e31abd4"
 
     steps:
       - name: Checkout repository
