--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -1,7 +1,5 @@
 name: Docker Publish
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
@@ -39,7 +37,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v3
 
@@ -50,7 +47,7 @@ jobs:
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
+        if: ${{ github.event.action == 'closed' && github.event.pull_request.merged }}
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -58,11 +55,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: build and push docker image
-        if: github.event_name != 'pull_request'
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
+          push: ${{ github.event.action == 'closed' && github.event.pull_request.merged }}
           push: true
           tags: biggates/esp-idf-devcontainer:idf_{{ matrix.tag }}_qemu_{{ matrix.qemu_version }}
           build-args: |
