--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -1,5 +1,7 @@
 name: Docker Publish
 on:
+  push:
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
@@ -47,7 +49,7 @@ jobs:
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        if: ${{ github.event.action == 'closed' && github.event.pull_request.merged }}
+        if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged }}
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -59,7 +61,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ github.event.action == 'closed' && github.event.pull_request.merged }}
+          push: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged }}
           push: true
           tags: biggates/esp-idf-devcontainer:idf_{{ matrix.tag }}_qemu_{{ matrix.qemu_version }}
           build-args: |
