--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -62,7 +62,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged }}
-          tags: biggates/esp-idf-devcontainer:idf_{{ matrix.idf_version }}_qemu_{{ matrix.qemu_version }}
+          tags: biggates/esp-idf-devcontainer:idf_${{ matrix.idf_version }}_qemu_${{ matrix.qemu_version }}
           build-args: |
             IDF_VERSION=${{ matrix.idf_version }}
             QEMU_SHA256=${{ matrix.qemu_sha256 }}
