--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks.git
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
     - id: check-merge-conflict
     - id: check-toml
@@ -8,19 +8,14 @@ repos:
     - id: end-of-file-fixer
     - id: mixed-line-ending
     - id: trailing-whitespace
-  - repo: https://github.com/psf/black.git
-    rev: 23.11.0
-    hooks:
-      - id: black
-        language_version: python3
   - repo: https://github.com/charliermarsh/ruff-pre-commit.git
-    rev: v0.1.6
+    rev: v0.8.3
     hooks:
       - id: ruff
         args:
           - "--fix"
   - repo: https://github.com/pre-commit/mirrors-prettier.git
-    rev: v3.1.0
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         types: [json]
