--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -23,7 +23,7 @@ jobs:
 
     strategy:
       matrix:
-        idf_version: ["v5.3.1", "v5.2.3", "v5.2.2", "v5.1.4", "v5.1.3", "v5.0.7"]
+        idf_version: ["v5.3.2", "v5.3.1", "v5.2.3", "v5.2.2", "v5.1.5", "v5.1.4", "v5.0.7"]
         qemu_version: ["20240606", "20240122"]
         include:
         - qemu_version: "20240606"
